[package]
name = "scrype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { version = "0.5.2", features = ["serialize"] }
deno_core = "0.174.0"
pomsky-macro = "0.9.0"
lazy_static = "1.4.0"
fancy-regex = "0.11.0"
regex = "1.7.1"
home = "0.5.4"
arboard = "3.2.0"
