[package]
name = "scrype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { version = "0.5.2", features = ["serialize", "unstable_grab"] }
pomsky-macro = "0.9.0"
lazy_static = "1.4.0"
fancy-regex = "0.11.0"
regex = "1.7.1"
home = "0.5.4"
arboard = { version = "3.2.0", features = ["wayland-data-control"] }
serde = "1.0.155"
serde_json = "1.0.94"
rust-embed = { version = "6.6.0", features = [
	"include-exclude",
	"include-flate",
] }
path-absolutize = "3.0.14"
# duct = "0.13.6"
futures = "0.3.27"
memoize = "0.4.0"
cfg-if = "1.0.0"

[dependencies.windows]
version = "0.46.0"
features = [
	"Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Memory",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Controls",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_DataExchange",
	"Win32_System_Ole",
]
